--- a/css/styles.css
+++ b/css/styles.css
@@ -1091,3 +1091,282 @@ img {
 .portfolio-footer-icon {
   margin-left: 16px;
 }
+
+/* start of hw7 */
+
+
+
+.header-container.container {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  max-width: 428px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+/* .nav-menu,
+.contact-list {
+  display: none;
+} */
+
+.liststyle > .list,
+.address-list > .list {
+  display: none;
+}
+
+.studio-logo {
+  color: #2e2f42;
+}
+
+.link,
+.item-link {
+  text-decoration: none;
+}
+
+
+
+/* Mobile Menu */
+
+.menu-toggle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px 35px 40px;
+  background-color: var(--white);
+  z-index: 10;
+
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--white);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-container .menu-toggle:hover,
+.menu-container .menu-toggle:focus {
+  background-color: var(--ocean);
+  border: none;
+  fill: var(--white);
+}
+
+.menu-toggle-close-svg {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-list-menu,
+.mobile-list-contact {
+  list-style: none;
+}
+
+.mobile-list-menu {
+  margin-top: 32px;
+}
+
+.mobile-list-item,
+.mobile-contact-item {
+  margin-bottom: 40px;
+}
+
+.mobile-list-item .item-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: var(--navy-blue);
+}
+
+.mobile-list-item .active.item-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: var(--ocean);
+}
+
+.mobile-list-contact .item-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: var(--ocean);
+}
+
+.mobile-list-contact .email-link {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: var(--slate);
+  text-decoration: none;
+}
+
+.mobile-menu-container {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.mobile-main-menu {
+  width: 100%;
+}
+
+.mobile-contact-menu {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+/* Mobile Menu Socmed Logo */
+
+.mobile-menu-socmed {
+  display: flex;
+  gap: 56px;
+  margin-bottom: 24px;
+}
+
+.mobile-menu-socmed-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu-socmed-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* HW5 */
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-socmed-link:hover,
+.mobile-menu-socmed-link:focus {
+  background-color: var(--green);
+}
+
+.mobile-menu-socmed-svg {
+  fill: var(--cloud);
+}
+
+
+/* tablet  */
+
+@media screen and (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+
+  .menu-container {
+    display: none;
+  }
+
+  /* header  */
+
+  .logo {
+    padding:  24px 0;
+    margin-right: 120px;
+  }
+
+  .header-container.container {
+    height: 72px;
+    display: flex;
+
+  }
+
+  .header-container {
+    display: flex;
+    justify-content: end;
+    width: 100%;
+  }
+
+  .list.contact-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
+  .liststyle,
+  .address-list {
+    display: flex;
+    align-items: center;
+  }
+
+  .container {
+    max-width: 768px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+
+  /* nav items */
+
+  .active.link {
+    color: #404bbf;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .contact-item > .link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .active::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -5%;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    width: 100%;
+  }
+
+  .liststyle > .list {
+    display: flex;
+    gap: 40px;
+  }
+}
+
