--- a/css/styles.css
+++ b/css/styles.css
@@ -81,14 +81,15 @@ body {
 }
 
 .header-title {
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 40px;
   text-align: center;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.72px;
   color: #ffffff;
   margin: 0 auto;
   margin-bottom: 48px;
-  max-width: 496px;
+  width: 320px;
+  font-style: normal;
 }
 
 .btn {
@@ -96,10 +97,11 @@ body {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
+  line-height: 24px;
+  letter-spacing: 0.64px;
   color: #ffffff;
   margin: 0 auto;
+  font-style: normal;
 }
 
 .btn:hover {
@@ -245,7 +247,7 @@ img {
 }
 
 .container {
-  width: 1158px;
+  width: auto;
   margin: 0 auto;
   padding: 0 15px 0 15px;
 }
@@ -312,10 +314,11 @@ img {
 }
 
 .section-two-list {
-  gap: 24px;
+  gap: 72px;
   display: flex;
   margin: 0;
   padding: 0;
+  flex-direction: column;
 }
 
 /* {.section-two-list .card-info:first-child {
@@ -348,6 +351,7 @@ img {
 
 .section-three-title {
   padding-bottom: 120px;
+  display: none;
 }
 
 .section-three-header {
@@ -373,10 +377,14 @@ img {
 
 .list-four {
   gap: 24px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .section-four-list {
   border-radius: 0px 0px 4px 4px;
+  justify-content: center;
 }
 
 .container-four {
@@ -485,6 +493,8 @@ img {
   background-position: center, center;
   background-size: cover;
   margin: auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* end of hw4 1st section */
@@ -499,6 +509,7 @@ img {
   background-color: #f4f4fd;
   border-radius: 4px;
   margin-bottom: 8px;
+  display: none;
 }
 
 /* end of hw4 section 2 */
@@ -1094,426 +1105,7 @@ img {
 
 /* start of hw7 */
 
-
-
-.header-container.container {
-  height: 70px;
+.hw7-section-two {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  
 }
-
-.container {
-  max-width: 428px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
-/* .nav-menu,
-.contact-list {
-  display: none;
-} */
-
-.liststyle > .list,
-.address-list > .list {
-  display: none;
-}
-
-.studio-logo {
-  color: #2e2f42;
-}
-
-.link,
-.item-link {
-  text-decoration: none;
-}
-
-
-
-/* Mobile Menu */
-
-.menu-toggle {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  border-radius: 50%;
-  outline: none;
-}
-
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 32px 35px 40px;
-  background-color: var(--white);
-  z-index: 10;
-
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
-}
-
-.menu-container .menu-toggle {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--white);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 0;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.menu-container .menu-toggle:hover,
-.menu-container .menu-toggle:focus {
-  background-color: var(--ocean);
-  border: none;
-  fill: var(--white);
-}
-
-.menu-toggle-close-svg {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-list-menu,
-.mobile-list-contact {
-  list-style: none;
-}
-
-.mobile-list-menu {
-  margin-top: 32px;
-}
-
-.mobile-list-item,
-.mobile-contact-item {
-  margin-bottom: 40px;
-}
-
-.mobile-list-item .item-link {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 40px;
-  letter-spacing: 0.02em;
-  color: var(--navy-blue);
-}
-
-.mobile-list-item .active.item-link {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 40px;
-  letter-spacing: 0.02em;
-  color: var(--ocean);
-}
-
-.mobile-list-contact .item-link {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 40px;
-  letter-spacing: 0.02em;
-  color: var(--ocean);
-}
-
-.mobile-list-contact .email-link {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 40px;
-  letter-spacing: 0.02em;
-  color: var(--slate);
-  text-decoration: none;
-}
-
-.mobile-menu-container {
-  display: flex;
-  flex-wrap: wrap;
-  height: 100%;
-  justify-content: space-between;
-}
-
-.mobile-main-menu {
-  width: 100%;
-}
-
-.mobile-contact-menu {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-/* Mobile Menu Socmed Logo */
-
-.mobile-menu-socmed {
-  display: flex;
-  gap: 56px;
-  margin-bottom: 24px;
-}
-
-.mobile-menu-socmed-icon {
-  width: 40px;
-  height: 40px;
-}
-
-.mobile-menu-socmed-link {
-  width: 100%;
-  height: 100%;
-  background-color: var(--iris);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* HW5 */
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu-socmed-link:hover,
-.mobile-menu-socmed-link:focus {
-  background-color: var(--green);
-}
-
-.mobile-menu-socmed-svg {
-  fill: var(--cloud);
-}
-
-
-/* tablet  */
-
-@media screen and (min-width: 768px) {
-  .menu-toggle {
-    display: none;
-  }
-
-  .menu-container {
-    display: none;
-  }
-
-  /* header  */
-
-  .logo {
-    padding:  24px 0;
-    margin-right: 120px;
-  }
-
-  .header-container.container {
-    height: 72px;
-    display: flex;
-
-  }
-
-  .header-container {
-    display: flex;
-    justify-content: end;
-    width: 100%;
-  }
-
-  .list.contact-list {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
-
-  .liststyle,
-  .address-list {
-    display: flex;
-    align-items: center;
-  }
-
-  .container {
-    max-width: 768px;
-    height: 100%;
-    margin: 0 auto;
-    padding: 0 15px;
-  }
-
-  /* nav items */
-
-  .active.link {
-    color: #404bbf;
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .contact-item > .link {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .active::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -5%;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-    width: 100%;
-  }
-
-  .liststyle > .list {
-    display: flex;
-    gap: 40px;
-  }
-
-  .link-style {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    padding: 24px 0;
-  }
-
-  li > .link:hover,
-  li > .link:focus {
-    color: #404bbf;
-  }
-
-  .address-list {
-    font-style: normal;
-    font-size: 12px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-  }
-
-  .address-list > .list {
-    display: flex;
-    gap: 12px;
-  }
-
-
-  /* main */
-
-  /* first section */
-
-  .section-title {
-    background-color: #2e2f42;
-    padding: 112px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)),
-        url(../images/hero-img.jpg);
-        background-repeat:  no-repeat;
-        background-position: center;
-        background-repeat: cover;
-        width: 100%;
-        height: 436px;
-  }
-
-  .header-title {
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    max-width: 496px;
-    margin: 0 auto 36px;
-  }
-
-  .hero-btn {
-      background-color: #4d5ae5;
-      font-family: inherit;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.5;
-      letter-spacing: 0.04em;
-      color: #ffffff;
-      cursor: pointer;
-      display: block;
-      min-width: 169px;
-      height: 56px;
-      border: none;
-      border-radius: 4px;
-      margin: 0 auto;
-        /* HW5 */
-      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .hero-btn:hover,
-  .hero-btn:focus {
-    background-color: #404bbf ;
-  }
-
-  /* section 2 */
-
-  .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-    }
-
-    .section-two-list .section-two-header {
-      text-align: left;
-    }
-
-    .section-two-list .section-two-paragraph,
-    .svc .section-two-paragraph {
-      font-size: 16px;
-      line-height: 1.5;
-      letter-spacing: 0.02em;
-      color: #434455;
-      text-align: left;
-    }
-
-    .section-two-title {
-      padding: 96px 0;
-    }
-
-    .list.section-two-list {
-      display: flex;
-      gap: 72px 24px;
-    }
-
-    .card-info {
-      flex: 0 0 calc((100% - 3 * 24px) / 4);
-    }
-
-    /* section 3 */
-
-    .section-three-header {
-      font-size: 36px;
-      line-height: 1.11;
-      text-align: center;
-      text-transform: capitalize;
-      color: #2e2f42;
-      margin-bottom: 72px;
-      letter-spacing: 0.02em;
-    }
-
-    .list-third.list {
-      display: flex;
-      gap: 24px;
-      flex-wrap: wrap;
-    }
-
-    .sec-three-list {
-      flex-basis: calc((100% - 24px) / 2);
-    }
-
-    .list-four.list {
-      gap: 64px 24px;
-    }
-
-}
-
